[package]
name = "kw-hn"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
article_scraper = "2.0.0-alpha.0"
dotenv = "0.15.0"
http_req_wasi = "0.11.1"
openai-flows = "0.7.1"
schedule-flows = "0.1.10"
serde = "1.0.156"
serde_derive = "1.0.156"
serde_json = "1.0.94"
slack-flows = "0.2.6"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt", "sync"] }
url = "2.3.1"
