[package]
name = "kw-hn"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
http_req_wasi = {version = "0.10", features = [ "wasmedge_ssl"]}
dotenv = "0.15.0"
openai-flows = "0.7.2"
schedule-flows = "0.1.10"
serde = "1.0.156"
serde_derive = "1.0.156"
serde_json = "1.0.94"
slack-flows = "0.3.1"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt", "sync"] }
web-scraper-flows = "0.1.0"
chrono = "0.4.26"
anyhow = "1.0.71"
flowsnet-platform-sdk = "0.1"
log = "0.4"
